--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=llm
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.force-response=true
+# 默认是否需要自动注入聊天客户端
+spring.ai.chat.client.enabled=true
+logging.level.org.springframework.ai.chat.client.advisor=DEBUG
 
+# 模型服务商相关配置
 spring.ai.openai.base-url=https://dashscope.aliyuncs.com/compatible-mode
 spring.ai.openai.api-key=sk-20a2242a1693449481321710788c60dc
 spring.ai.openai.chat.options.model=qwen-plus
+#serpapi-key
